@@ -1,5 +1,10 @@
 2013-01-08  Xavi Artigas  <xartigas@fluendo.com>
 
+	* src/gstttmlstate.c: (gst_ttml_state_restore_attr_stack):
+	  - Fix build for GLib versions < 2.36
+
+2013-01-08  Xavi Artigas  <xartigas@fluendo.com>
+
 	* src/Makefile.am:
 	  - Fix dist-check
 
